feat: AI simulazione completa — conquiste, frecce, carte, obiettivi corretti